@@ -5,6 +5,12 @@
 This document provides a high-level view of the changes to the {project-name} by release.
 For a detailed view of what has changed, refer to the {url-repo}/commits/main[commit history] on GitHub.
 
+== Unreleased
+
+Bug Fixes::
+
+* use specified column widths to avoid bugs in column width calculation when using colspans (#1368)
+
 == 2.0.1 (2022-05-21) - @mojavelinux
 
 Bug Fixes::
